# ping

./: CMakeLists.txt  ip.ini  main.cpp
inc/: Host.h  Parser.h  Ping.h  Telegram.h  colormod.h  func.h
src/: Host.cpp  Parser.cpp  Ping.cpp  Telegram.cpp
